# MLLibrary

./: .gitignore  CMakeLists.txt  README.md
MLLibrary/: TensorGPURuntime.cppm  TensorRuntime.cppm  base.h  main.cpp  ml_app_debug  mnist.py  test_labels.mat  train_labels.mat
MLLibrary.xcodeproj/: project.pbxproj
MLLibrary.xcodeproj/xcuserdata/swayamsingal.xcuserdatad/xcschemes/: xcschememanagement.plist
MLLibrary/Benchmark/: benchmark.cpp  benchmark.hpp  matrix_benchmark.cpp
MLLibrary/Classical/: classical.cpp  classical.hpp
MLLibrary/Contracts/: runtime_contracts.cpp  runtime_contracts.hpp
MLLibrary/Core/: arena.cpp  arena.h  prng.cpp  prng.h
MLLibrary/Data/: data.cpp  data.hpp
MLLibrary/Math/: matrix.cpp  matrix.hpp
MLLibrary/Model/: model.cpp  model.hpp
MLLibrary/Training/: checkpoint.cpp  checkpoint.hpp  training.cpp  training.hpp
MLLibrary/Visual/: dataset_report.cpp  training_report.cpp
MLLibrary/ml_app_debug.dSYM/Contents/: Info.plist
MLLibrary/ml_app_debug.dSYM/Contents/Resources/DWARF/: ml_app_debug
MLLibrary/ml_app_debug.dSYM/Contents/Resources/Relocations/aarch64/: ml_app_debug.yml
ModuleInterfaces/: MLLibrary.cppm  arena.cppm  base.cppm  contracts.cppm  contracts_impl.cpp  data.cppm  matrix.cppm  model.cppm  prng.cppm  training.cppm
Tests/: contracts_module.cpp  core_tests.cpp  tensor_gpu_integration.cpp  tensor_integration.cpp
docs/: ARCHITECTURE.md  CONTRACTS.md  EXTERNAL_REUSE_AUDIT.md  LOCAL_MULTIMODAL_DEVICE_AGENT.md  PHASE_IMPLEMENTATION_PLAN.md  ROADMAP.md
